--- a/css/interests.css
+++ b/css/interests.css
@@ -99,7 +99,7 @@
 
 @media only screen and (max-width: 600px) {
   .interestspage {
-    margin-bottom: 80px;
+    margin-bottom: 50px;
     margin-top: 110px;
     display: flex;
     flex-direction: row;
