--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -127,7 +127,7 @@
       display: flex;
       justify-content: space-between;
       flex-direction: row;
-      width: 100%;
+      width: 100vw;
       height: auto;
       padding-bottom: 5px;
       margin: 5px 5px;
@@ -159,7 +159,7 @@
     
     .portfolio-img {
       border-radius: 1px;
-      width: 100px;
+      width: 30%;
       height: 100px;
       background-size: cover;
       background-position: center;
@@ -171,7 +171,7 @@
       font-size: 10px;
       font-weight: lighter;
       text-align: center;
-      width: 360px;
+      width: 70%;
       margin-left: 5px;
     }
   
@@ -179,7 +179,7 @@
       font-size: 12px;
       font-weight: lighter;
       text-align: center;
-      width: 480px;
+      width: 100%;
       padding: 3px;
     }
   
