--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin: 50px 50px 120px 50px;
+  margin: 50px 50px 100px 50px;
 }
 
 div.name {
@@ -55,7 +55,7 @@ h6 {
 p {
   font-family: 'Open Sans', sans-serif;
   text-align: justify;
-  padding: 20px 10px;
+  padding: 10px 10px;
   color: #535460;
 }
 
